# azure-ai-search-migration

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  azure-pipelines.yml  dockerfile  main.py  pyproject.toml
backup_service/: __init__.py  audit_tracker.py  backup_engine.py  config.py  constants.py  document_fetcher.py  index_operations.py  logger.py  upload_manager.py  utils.py  window_manager.py
